--- a/install
+++ b/install
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 git submodule init
-port install p5-app-ack
+brew install ack
 ln -s ~/.vim/vimrc ~/.vimrc
 ln -s ~/.vim/gvimrc ~/.gvimrc
+ln -s ~/.vim/dotfile ~/.bash_profile
