ackrc, Thor support, netrw, pretty git log

--- a/install
+++ b/install
@@ -6,3 +6,4 @@ brew install ack bash-completion wget tree
 ln -s ~/.vim/vimrc ~/.vimrc
 ln -s ~/.vim/gvimrc ~/.gvimrc
 ln -s ~/.vim/profile ~/.bash_profile
+ln -s ~/.vim/ackrc ~/.ackrc
