--- a/install
+++ b/install
@@ -1,9 +1,11 @@
 #!/bin/sh
 
-git submodule init
-git submodule update
-brew install ack bash-completion wget tree 
-ln -s ~/.vim/vimrc ~/.vimrc
-ln -s ~/.vim/gvimrc ~/.gvimrc
-ln -s ~/.vim/profile ~/.bash_profile
-ln -s ~/.vim/ackrc ~/.ackrc
+brew install ack wget tree bat exa fzf diff-so-fancy macvim
+mkdir ~/.tmp
+mkdir ~/.vim
+ln -s ~/.dotfiles/zshrc ~/.zshrc
+ln -s ~/.dotfiles/vimrc ~/.vimrc
+ln -s ~/.dotfiles/gvimrc ~/.gvimrc
+ln -s ~/.dotfiles/ackrc ~/.ackrc
+ln -s ~/.dotfiles/vim-syntax ~/.vim/syntax
+ln -s ~/.dotfiles/vim-indent ~/.vim/indent
