--- a/install
+++ b/install
@@ -7,6 +7,7 @@ brew install ack wget tree bat exa fzf diff-so-fancy macvim
 mkdir ~/.tmp
 mkdir ~/.vim
 ln -s ~/.dotfiles/zshrc ~/.zshrc
+ln -s ~/.dotfiles/p10k.zsh ~/.p10k.zsh
 ln -s ~/.dotfiles/vimrc ~/.vimrc
 ln -s ~/.dotfiles/gvimrc ~/.gvimrc
 ln -s ~/.dotfiles/ackrc ~/.ackrc
